fixed the spacing on headerbar, changed iconelementleft to iconelementstyleleft in appbar tag

--- a/client/src/components/HeaderBar/styles.css
+++ b/client/src/components/HeaderBar/styles.css
@@ -8,7 +8,28 @@
 }
 .headerBar {
   flex-direction: column;
+  justify-content: space-between;
 }
+.headerBar h1 {
+  display: none;
+}
+
+.iconClassNameLeft {
+  margin-top: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 0px;
+  padding-top: 0px;
+  letter-spacing: 0px;
+  font-size: 24px;
+  font-weight: 400;
+  color: rgb(255, 255, 255);
+  height: 64px;
+  line-height: 64px;
+  flex: 1 1 0%;
+}
+
 .headerLogo {
   height: 36px;
   width: auto;
@@ -26,7 +47,6 @@
   display: flex;
   margin-left: 1rem;
   padding: 6px 0;
-  width: 100%;
 }
 
 .headerButton {
